# homework_for_Qt

./: README.md
Client/: CMakeLists.txt
Client/sources/: ConnectToDB.cpp  ConnectToDB.h  Message.cpp  Message.h  User.cpp  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  registrationform.cpp  registrationform.h  startscreen.cpp  startscreen.h  startscreen.ui
Server/: CMakeLists.txt
Server/sources/: ConnectToDB.cpp  ConnectToDB.h  Message.cpp  Message.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/sources/: ConnectToDB.cpp  ConnectToDB.h  Message.cpp  Message.h  User.h  loginform.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.ui  startscreen.cpp
